--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Raleway:200,400, 600|Roboto:200,300,400,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Noto+Sans+SC:700|Raleway:100|Roboto:200,300,400,600" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
