--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Noto+Sans+SC:700|Raleway:100,300|Roboto:200,300,400,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Hind:400,500,700|Montserrat:700|Raleway:400,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
