added og data and other build optimizations

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,13 @@
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property=”og:title” content=”Everest” />
+    <meta property=”og:description” content=”A place to share and collect online resources” />
+    <meta property=”og:image” content=”./assets/images/everest-og.webp” />
+    <meta property="og:image:width" content="1248" />
+    <meta property="og:image:height" content="762" />
+    <meta property="og:image:alt" content="Everest open graph image" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons|Bree+Serif|Hind:400,500,700|Montserrat:300,700|Raleway:400,900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body class="theme-light">
     <app-root></app-root>
