--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property=”og:title” content=”Everest” />
-    <meta property=”og:image” content=”https://i.imgur.com/0U9tDfX.png” />
+    <meta property=”og:image:secure_url” content=”https://i.imgur.com/0U9tDfX.png” />
     <meta property="og:image:width" content="1248" />
     <meta property="og:image:height" content="762" />
     <meta property="og:image:alt" content="Everest open graph image" />
