--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Everest</title>
-    <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property=”og:title” content=”Everest” />
-    <meta property=”og:image:secure_url” content=”https://i.imgur.com/0U9tDfX.png” />
-    <meta property="og:image:width" content="1248" />
-    <meta property="og:image:height" content="762" />
-    <meta property="og:image:alt" content="Everest open graph image" />
-    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
-    <link rel="icon" type="image/png" href="./assets/favicon/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="./assets/favicon/favicon-32x32.png" sizes="32x32">
-  </head>
-  <body class="theme-light">
-    <app-root></app-root>
-  </body>
+<head>
+  <meta property="og:title" content="Everest" />
+  <meta property="og:image" content="https://i.imgur.com/0U9tDfX.png" />
+  <meta property="og:image:width" content="1248" />
+  <meta property="og:image:height" content="762" />
+  <meta property="og:image:alt" content="Everest open graph image" />
+  <meta charset="utf-8" />
+  <title>Everest</title>
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
+  <link rel="icon" type="image/png" href="./assets/favicon/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="./assets/favicon/favicon-32x32.png" sizes="32x32">
+</head>
+
+<body class="theme-light">
+  <app-root></app-root>
+</body>
+
 </html>
