--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <title>Everest</title>
   <base href="/"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="description" content="Social network lite for sharing and collecting resources off the net">
   <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico"/>
   <link rel="icon" type="image/png" href="./assets/favicon/favicon-16x16.png" sizes="16x16">
   <link rel="icon" type="image/png" href="./assets/favicon/favicon-32x32.png" sizes="32x32">
