--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
   <base href="/"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content="Social network lite for sharing and collecting resources off the net">
-  <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico"/>
-  <link rel="icon" type="image/png" href="./assets/favicon/favicon-16x16.png" sizes="16x16">
-  <link rel="icon" type="image/png" href="./assets/favicon/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" href="./assets/images/everest-logo-pwa.svg"/>
+  <link rel=”mask-icon” href=”./assets/images/everest-logo-pwa.svg” color=”#3C0093">
+  <link rel="apple-touch-icon" href="./assets/images/everest-logo-pwa.svg">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#3C0093">
 </head>
 
 <body class="theme-light">
