--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
   <title>Everest</title>
   <meta property="og:title" content="Everest"/>
-  <meta property="og:image" content="https://i.imgur.com/0U9tDfX.png"/>
+  <meta property="og:image" content="https://i.imgur.com/kEHuINJ.png"/>
   <meta property="og:description" content="Social network lite for sharing and collecting resources off the net"/>
   <meta property="og:image:width" content="1248"/>
   <meta property="og:image:height" content="762"/>
